# JBA-Blockchain-Hackathon-2022-Spring-Solana

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: .eslintrc.json  custom.d.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
app/json/: dush_metadata.json  hibee_metadata.json
app/jsons/: hist_metadata.json
app/src/: App.tsx  custom.d.ts  dialog.tsx  idl.json  index.tsx  interact.ts  mint_card.tsx  mint_page.tsx  presentation.tsx  slide.tsx  slide_market.tsx  slide_market_card.tsx  test.tsx  your_materials.tsx  your_slide_card.tsx  your_slide_page.tsx
app/src/components/: DetailDialog.tsx  MintCard.tsx  Slide.tsx  SlideMarketCand.tsx  SlideMarketCard.tsx  SolanaProvider.tsx  YourSlideCard.tsx
app/src/routes/: MaterialMarketPage.tsx  MintPage.tsx  PresentationPage.tsx  SlideMarketPage.tsx  YourMaterialsPage.tsx  YourSlidePage.tsx  index.ts
app/src/solana/: SolanaProvider.tsx  idl.json  tansuNftAccount.ts  tansu_nft.ts  tansu_nft_types.ts
docs/: bundle.js  bundle.js.LICENSE.txt
programs/JBA-Blockchain-Hackathon-2022-Spring-Solana/: Cargo.toml
programs/JBA-Blockchain-Hackathon-2022-Spring-Solana/src/: lib.rs
programs/tansu-nft/: Cargo.toml
programs/tansu-nft/src/: lib.rs
tests/: JBA-Blockchain-Hackathon-2022-Spring-Solana.ts  tansu_nft.ts
